--- a/Luftborn/appsettings.json
+++ b/Luftborn/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AHMED_EID\\AHMEDEID;Initial Catalog=Luftborn;Integrated Security=True"
+    "DefaultConnection": "Data Source=.;Initial Catalog=Luftborn;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
